<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDestinatie"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/destinatie"
            android:inputType="text" />

        <EditText
            android:id="@+id/etDistanta"
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/distanta"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSalveaza"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnSalveaza" />
        <Button
            android:id="@+id/btnIncarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnIncarca" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSterge"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnSterge" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etProtejat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/protejat"
            android:inputType="none" />
    </LinearLayout>
</LinearLayout>